--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,45 +1,44 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<nav class="navbar navbar-expand-md sticky-top border-bottom" data-bs-theme="light">
+  <div class="container">
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas"
+      aria-controls="#offcanvas" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="#offcanvas" aria-labelledby="#offcanvasLabel">
+      <div class="offcanvas-body p-4 pt-0 p-lg-0">
+        <ul class="navbar-nav flex-row flex-wrap me-md-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link py-2 px-0 px-lg-2"
+              href="https://www.facebook.com/Little-Chef-160076680862357/?rf=109246645805647">
+              <i class="bi bi-facebook text-danger"></i>
+            </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li>
-                <a class="dropdown-item" href="#">Action</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="#">Another action</a>
-              </li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+          <li>
+            <a class="nav-link py-2 px-0 px-lg-2" href="https://www.yelp.com/biz/little-chef-coatesville">
+              <i class="bi bi-yelp text-danger"></i>
+            </a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">
-            Search
-          </button>
-        </form>
+        <ul class="navbar-nav flex-grow-1 justify-content-between">
+          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Location</a></li>
+        </ul>
+        <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
+          <li class="nav-item">
+            <a class="nav-link py-2 px-0 px-lg-2"
+              href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">
+              <i class="bi bi-geo-alt-fill text-danger"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link py-2 px-0 px-lg-2"
+              href="tel:+16103843221">
+              <i class="bi bi-telephone-fill text-danger"></i>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
-  </nav>
-  
+  </div>
+</nav>
