worked on hero section

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md sticky-top border-bottom" data-bs-theme="light">
+<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top border-bottom" data-bs-theme="light">
   <div class="container">
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas"
       aria-controls="#offcanvas" aria-label="Toggle navigation">
@@ -10,12 +10,12 @@
           <li class="nav-item">
             <a class="nav-link py-2 px-0 px-lg-2"
               href="https://www.facebook.com/Little-Chef-160076680862357/?rf=109246645805647">
-              <i class="bi bi-facebook text-danger"></i>
+              <i class="bi bi-facebook"></i>
             </a>
           </li>
           <li>
             <a class="nav-link py-2 px-0 px-lg-2" href="https://www.yelp.com/biz/little-chef-coatesville">
-              <i class="bi bi-yelp text-danger"></i>
+              <i class="bi bi-yelp"></i>
             </a>
           </li>
         </ul>
