setting up fonts, logo layout, and illustrations

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -2,7 +2,17 @@
   max-width: 960px;
 }
 
-#hero-section {
-  background-color: black;
-  color: white;
+
+body {
+  font-family: 'Noto Sans', serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+.site-title,
+.site-nav {
+  font-family: 'Lobster', sans-serif;
 }
