--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
             </a>
           </li>
         </ul>
-        <ul class="navbar-nav flex-grow-1 justify-content-between">
+        <ul class="navbar-nav flex-row flex-wrap me-md-auto ms-md-auto">
           <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Location</a></li>
