--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,39 +1,40 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top border-bottom" data-bs-theme="light">
   <div class="container">
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas"
-      aria-controls="#offcanvas" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="#offcanvas" aria-labelledby="#offcanvasLabel">
-      <div class="offcanvas-body p-4 pt-0 p-lg-0">
-        <ul class="navbar-nav flex-row flex-wrap me-md-auto">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample11"
+        aria-controls="navbarsExample11" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse d-lg-flex">
+        <a class="navbar-brand col-3 me-0" href="#">
+          <img src="{{ site.baseurl }}/assets/img/logo_circle.png" alt="Logo" width="32" height="32"
+            class="d-inline-block align-text-top">
+          <span class="d-none d-md-inline">Little Chef Restaurant</span>
+        </a>
+        <ul class="navbar-nav col-6 justify-content-lg-center">
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="#">About</a></li>
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Menu</a></li>
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Location</a></li>
+        </ul>
+        <ul class="navbar-nav col-3 justify-content-lg-end">
           <li class="nav-item">
-            <a class="nav-link py-2 px-0 px-lg-2"
+            <a class="nav-link"
               href="https://www.facebook.com/Little-Chef-160076680862357/?rf=109246645805647">
               <i class="bi bi-facebook"></i>
             </a>
           </li>
           <li>
-            <a class="nav-link py-2 px-0 px-lg-2" href="https://www.yelp.com/biz/little-chef-coatesville">
+            <a class="nav-link" href="https://www.yelp.com/biz/little-chef-coatesville">
               <i class="bi bi-yelp"></i>
             </a>
           </li>
-        </ul>
-        <ul class="navbar-nav flex-row flex-wrap me-md-auto ms-md-auto">
-          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Location</a></li>
-        </ul>
-        <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
           <li class="nav-item">
-            <a class="nav-link py-2 px-0 px-lg-2"
-              href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">
+            <a class="nav-link" href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">
               <i class="bi bi-geo-alt-fill text-danger"></i>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link py-2 px-0 px-lg-2"
-              href="tel:+16103843221">
+            <a class="nav-link" href="tel:+16103843221">
               <i class="bi bi-telephone-fill text-danger"></i>
             </a>
           </li>
