updated layout for mobile display. added section for contact info

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,9 +7,9 @@
       </button>
       <div class="collapse navbar-collapse d-lg-flex">
         <a class="navbar-brand col-3 me-0" href="#">
-          <img src="{{ site.baseurl }}/assets/img/logo_circle.png" alt="Logo" width="32" height="32"
-            class="d-inline-block align-text-top">
-          <span class="d-none d-md-inline">Little Chef Restaurant</span>
+          <img src="{{ site.baseurl }}/assets/img/logo_inner_circle.png" alt="Brand Logo" width="32" height="32"
+            class="img-fluid d-inline-block align-text-top">
+          <span class="d-md-none d-lg-inline fs-6">Little Chef Restaurant</span>
         </a>
         <ul class="navbar-nav col-6 justify-content-lg-center">
           <li class="nav-item"><a class="nav-link" aria-current="page" href="#">About</a></li>
@@ -17,6 +17,16 @@
           <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Location</a></li>
         </ul>
         <ul class="navbar-nav col-3 justify-content-lg-end">
+          <li class="nav-item">
+            <a class="nav-link" href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">
+              <i class="bi bi-geo-alt-fill text-danger"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tel:+16103843221">
+              <i class="bi bi-telephone-fill text-danger"></i>
+            </a>
+          </li>
           <li class="nav-item">
             <a class="nav-link"
               href="https://www.facebook.com/Little-Chef-160076680862357/?rf=109246645805647">
@@ -26,16 +36,6 @@
           <li>
             <a class="nav-link" href="https://www.yelp.com/biz/little-chef-coatesville">
               <i class="bi bi-yelp"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">
-              <i class="bi bi-geo-alt-fill text-danger"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="tel:+16103843221">
-              <i class="bi bi-telephone-fill text-danger"></i>
             </a>
           </li>
         </ul>
