created image for divider. implemented divider. adjusted section fonts and spacing

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -11,3 +11,9 @@ h5,
 .site-nav {
   font-family: 'Lobster', sans-serif;
 }
+
+.divider {
+  height: 30px;
+  background-image: url('../img/background2.png');
+  background-attachment: fixed;
+}
