--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,22 +1,21 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top border-bottom" data-bs-theme="light">
-  <div class="container">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" data-bs-theme="light">
     <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample11"
-        aria-controls="navbarsExample11" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand col-3 me-0" href="#">
+        <img src="{{ site.baseurl }}/assets/img/logo_inner_circle.png" alt="Brand Logo" width="32" height="32"
+          class="img-fluid d-inline-block align-text-top">
+        <span class="fs-6">Little Chef Restaurant</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
+        aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse d-lg-flex">
-        <a class="navbar-brand col-3 me-0" href="#">
-          <img src="{{ site.baseurl }}/assets/img/logo_inner_circle.png" alt="Brand Logo" width="32" height="32"
-            class="img-fluid d-inline-block align-text-top">
-          <span class="d-md-none d-lg-inline fs-6">Little Chef Restaurant</span>
-        </a>
-        <ul class="navbar-nav col-6 justify-content-lg-center">
-          <li class="nav-item"><a class="nav-link" aria-current="page" href="#">About</a></li>
-          <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Menu</a></li>
-          <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Location</a></li>
+      <div class="collapse navbar-collapse col-9" id="navMenu">
+        <ul class="navbar-nav col-9 justify-content-lg-center">
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#details">Address & Hours</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
         </ul>
-        <ul class="navbar-nav col-3 justify-content-lg-end">
+        <ul class="navbar-nav col-3 justify-content-lg-end d-md-none d-lg-flex">
           <li class="nav-item">
             <a class="nav-link" href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">
               <i class="bi bi-geo-alt-fill text-danger"></i>
@@ -28,8 +27,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"
-              href="https://www.facebook.com/Little-Chef-160076680862357/?rf=109246645805647">
+            <a class="nav-link" href="https://www.facebook.com/Little-Chef-160076680862357/?rf=109246645805647">
               <i class="bi bi-facebook"></i>
             </a>
           </li>
@@ -41,5 +39,4 @@
         </ul>
       </div>
     </div>
-  </div>
 </nav>
