--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -12,8 +12,7 @@ h5,
   font-family: 'Lobster', sans-serif;
 }
 
-.divider {
-  height: 30px;
-  background-image: url('../img/background2.png');
-  background-attachment: fixed;
+#hero {
+  background: conic-gradient(from 180deg at 100% 100%, #DFEAF0, #DAB2A3, #FD623C);
 }
+
