--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -12,7 +12,21 @@ h5,
   font-family: 'Lobster', sans-serif;
 }
 
-#hero {
-  background: conic-gradient(from 180deg at 100% 100%, #DFEAF0, #DAB2A3, #FD623C);
+@media (min-width: 992px) {
+  .hero-gradient-lg {
+    background-size: 100% 100%;
+    background-position: 0px 0px;
+    background-image: radial-gradient(75% 100% at 100% 50%, #C54172 0%, #FFB754 50%, #C2E3E4 100%) !important;
+  }
 }
 
+
+
+
+@media (min-width: 768px) {
+  .hero-gradient-md {
+    background-size: 100% 100%;
+background-position: 0px 0px;
+background-image: radial-gradient(100% 50% at 50% 0%, #C54172 0%, #FFB754 50%, #C2E3E4 100%);
+  }
+}
