--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -12,21 +12,19 @@ h5,
   font-family: 'Lobster', sans-serif;
 }
 
-@media (min-width: 992px) {
-  .container-gradient-lg {
-    background-size: 100% 100%;
-    background-position: 0px 0px;
-    background-image: radial-gradient(100% 100% at 0% 0%, #FE6B60 0%, #FEE280 40%, #9EDBD9FF 90%) !important;
-  }
+.container-gradient {
+  background-image: linear-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .4)), url('../img/gradient-background.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
 }
 
-
-
-
-@media (min-width: 768px) {
-  .container-gradient-md {
-    background-size: 100% 100%;
-    background-position: 0px 0px;
-    background-image: radial-gradient(100% 100% at 0% 0%, #FE6B60 0%, #FEE280 40%, #9EDBD9FF 90%);
-  }
+.overlay {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.5);
+  /* Adjust the alpha value for transparency */
 }
