updating hero section font settings for mobile. Made navbar white to match the hero section background.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" data-bs-theme="light">
+<nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top" data-bs-theme="light">
     <div class="container-fluid">
       <a class="navbar-brand col-3 me-0" href="#">
         <img src="{{ site.baseurl }}/assets/img/logo_inner_circle.png" alt="Brand Logo" width="32" height="32"
@@ -13,7 +13,7 @@
         <ul class="navbar-nav col-9 justify-content-lg-center">
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#details">Address & Hours</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+          <li class="nav-item"><a class="nav-link" href="#menus">Menu</a></li>
         </ul>
         <ul class="navbar-nav col-3 justify-content-lg-end d-md-none d-lg-flex">
           <li class="nav-item">
