working on menu section layout

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
       <a class="navbar-brand col-3 me-0" href="#">
         <img src="{{ site.baseurl }}/assets/img/logo_inner_circle.png" alt="Brand Logo" width="32" height="32"
           class="img-fluid d-inline-block align-text-top">
-        <span class="fs-6">Little Chef Restaurant</span>
+        <span class="fs-6">Little Chef Family Restaurant</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
         aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
