--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -13,9 +13,13 @@ h5,
 }
 
 .container-gradient {
-  background-image: linear-gradient(rgba(255, 255, 255, .7), rgba(255, 255, 255, .7)), url('../img/gradient-background.png');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/gradient-background.png');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   display: block;
+}
+
+.text-blur {
+  backdrop-filter: blur(5px)
 }
