added color pallete

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -27,3 +27,16 @@ h5,
 .font-spacing-1 {
   letter-spacing: 1px;
 }
+
+
+/*
+https://mycolor.space/?hex=%238E171D&sub=1
+
+Matching Gradient
+#8E171D
+#A62950
+#AF4884
+#A86AB4
+#958BDA
+#7DABF4
+*/
