finished details section. Added menu search functionality.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,21 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top" data-bs-theme="light">
-    <div class="container-fluid">
-      <a class="navbar-brand col-3 me-0" href="#">
-        <img src="{{ site.baseurl }}/assets/img/logo_inner_circle.png" alt="Brand Logo" width="32" height="32"
-          class="img-fluid d-inline-block align-text-top">
-        <span class="fs-6">Little Chef Family Restaurant</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
-        aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse col-9" id="navMenu">
-        <ul class="navbar-nav col-9 justify-content-lg-center">
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#details">Address & Hours</a></li>
-          <li class="nav-item"><a class="nav-link" href="#menus">Menu</a></li>
-        </ul>
-        <ul class="navbar-nav col-3 justify-content-lg-end d-md-none d-lg-flex">
+  <div class="container-fluid">
+    <a class="navbar-brand col-3 me-0" href="#">
+      <img src="{{ site.baseurl }}/assets/img/logo_inner_circle.png" alt="Brand Logo" width="32" height="32"
+        class="img-fluid d-inline-block align-text-top">
+      <span class="fs-6">Little Chef Family Restaurant</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
+      aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse col-9" id="navMenu">
+      <ul class="navbar-nav col-9 justify-content-lg-center">
+        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Welcome</a></li>
+        <li class="nav-item"><a class="nav-link" href="#details">Come By</a></li>
+        <li class="nav-item"><a class="nav-link" href="#menus">Menu</a></li>
+      </ul>
+      <ul class="navbar-nav col-3 justify-content-lg-end d-md-none d-lg-flex">
           <li class="nav-item">
             <a class="nav-link" href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">
               <i class="bi bi-geo-alt-fill text-danger"></i>
@@ -23,20 +23,20 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="tel:+16103843221">
-              <i class="bi bi-telephone-fill text-danger"></i>
+              <i class="bi bi-telephone-fill"></i>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.facebook.com/Little-Chef-160076680862357/?rf=109246645805647">
-              <i class="bi bi-facebook"></i>
-            </a>
-          </li>
-          <li>
-            <a class="nav-link" href="https://www.yelp.com/biz/little-chef-coatesville">
-              <i class="bi bi-yelp"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.facebook.com/Little-Chef-160076680862357/?rf=109246645805647">
+            <i class="bi bi-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a class="nav-link" href="https://www.yelp.com/biz/little-chef-coatesville">
+            <i class="bi bi-yelp"></i>
+          </a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
