--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,10 @@
     {{ content }}
     <script src="{{ "/assets/js/bootstrap.bundle.min.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/main.js" | relative_url }}"></script>
+    <script>
+        // Access the JSON data from the rendered script tag
+        var menuSections = {{ site.data.menus.sections | jsonify }};
+      </script>
 </body>
 
 </html>
