Adding Menu items

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,8 +11,8 @@
     </button>
     <div class="collapse navbar-collapse col-9" id="navMenu">
       <ul class="navbar-nav col-9 justify-content-lg-center">
-        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Welcome</a></li>
-        <li class="nav-item"><a class="nav-link" href="#details">Come By</a></li>
+        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Who We Are</a></li>
+        <li class="nav-item"><a class="nav-link" href="#details">Address & Hours</a></li>
         <li class="nav-item"><a class="nav-link" href="#menus">Menu</a></li>
       </ul>
       <ul class="navbar-nav col-3 justify-content-lg-end d-md-none d-lg-flex">
